commit tree 43cf7cfd5a3afe858bd13c3a06b59de9a55f539b

--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img 
+    src = "https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt = "Lion Roaring"
+    title = "Lion Roaring in the wilderness"
+    />
+    <img 
+    src = "https://www.google.com/search?q=kevin+durant&rlz=1C5CHFA_enUS703US703&sxsrf=APq-WBtYq5mu7s4oJSB3PRm5OCvS2KJnIA:1647466915109&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiH8IPCzMv2AhVfj3IEHe6uCSMQ_AUoAnoECAIQBA&biw=2560&bih=1304&dpr=1#imgrc=bDX_dPFNzAmvBM" 
+    alt = "Kevin Durant"
+    title = "Kevin Durant playing basketball"
+    />
+    <img 
+    src = "https://www.google.com/search?q=steph+curry&tbm=isch&ved=2ahUKEwiHk8DDzMv2AhUTE1kFHZt6Cn0Q2-cCegQIABAA&oq=steph+curry&gs_lcp=CgNpbWcQAzIHCAAQsQMQQzIHCAAQsQMQQzIICAAQgAQQsQMyCAgAEIAEELEDMggIABCABBCxAzILCAAQgAQQsQMQgwEyBQgAEIAEMgsIABCABBCxAxCDATIFCAAQgAQyCAgAEIAEELEDOgcIIxDvAxAnOgQIABBDOgoIIxDvAxDqAhAnOggIABCxAxCDAVDYBligFmCnF2gBcAB4AIABV4gBuwWSAQIxMpgBAKABAaoBC2d3cy13aXotaW1nsAEKwAEB&sclient=img&ei=plkyYoeoC5Om5NoPm_Wp6Ac&bih=1304&biw=2560&rlz=1C5CHFA_enUS703US703" 
+    alt = "Steph Curry"
+    title = "Picture of Steph Curry"
+    />
   </body>
 </html>
